--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,54 @@
 @import "tailwindcss";
+@tailwind utilities;
+
+@layer components {
+  .bg-pattern-mobile-light {
+    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
+    background-image: url("./pattern-background-mobile-light.svg");
+    background-size: cover; /* O el valor que necesites */
+    background-repeat: no-repeat;
+    background-position: center;
+    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
+  }
+  .bg-pattern-tablet-light {
+    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
+    background-image: url("./pattern-background-tablet-light.svg");
+    background-size: cover; /* O el valor que necesites */
+    background-repeat: no-repeat;
+    background-position: center;
+    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
+  }
+  .bg-pattern-desktop-light {
+    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
+    background-image: url("./pattern-background-desktop-light.svg");
+    background-size: cover; /* O el valor que necesites */
+    background-repeat: no-repeat;
+    background-position: center;
+    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
+  }
+
+  .bg-pattern-mobile-dark {
+    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
+    background-image: url("./pattern-background-mobile-dark.svg");
+    background-size: cover; /* O el valor que necesites */
+    background-repeat: no-repeat;
+    background-position: center;
+    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
+  }
+  .bg-pattern-tablet-dark {
+    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
+    background-image: url("./pattern-background-tablet-dark.svg");
+    background-size: cover; /* O el valor que necesites */
+    background-repeat: no-repeat;
+    background-position: center;
+    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
+  }
+  .bg-pattern-desktop-dark {
+    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
+    background-image: url("./pattern-background-desktop-dark.svg");
+    background-size: cover; /* O el valor que necesites */
+    background-repeat: no-repeat;
+    background-position: center;
+    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
+  }
+}
