--- a/src/index.css
+++ b/src/index.css
@@ -1,67 +1,54 @@
 @import "tailwindcss";
 @tailwind utilities;
 
-:root {
-  background-color: #ebf0ff71;
-}
-
 @layer components {
+  .bg-cover {
+    min-height: 100vh;
+    width: 100%;
+    display: flex; /* Opcional: ayuda a centrar contenido */
+    flex-direction: column;
+  }
+
   .bg-pattern {
-    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
     background-image: url("./pattern-background-mobile-light.svg");
     background-size: contain;
     background-repeat: no-repeat;
-
-    /** background-color: aquamarine;
-    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
   }
 
   /* Tablet (desde 768px) */
   @media (min-width: 768px) {
     .bg-pattern {
-      /* La función url() automáticamente resolverá la ruta al archivo SVG. */
       background-image: url("./pattern-background-tablet-light.svg");
       background-size: contain;
       background-repeat: no-repeat;
-      /* background-color: rgb(152, 152, 16);
-      /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
     }
   }
 
   /* Desktop (desde 1024px) */
   @media (min-width: 1024px) {
     .bg-pattern {
-      /* La función url() automáticamente resolverá la ruta al archivo SVG. */
       background-image: url("./pattern-background-desktop-light.svg");
       background-size: cover;
       background-repeat: no-repeat;
-      /*  background-color: brown;
-      /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
     }
   }
 
   .bg-pattern-mobile-dark {
-    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
     background-image: url("./pattern-background-mobile-dark.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
   }
   .bg-pattern-tablet-dark {
-    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
     background-image: url("./pattern-background-tablet-dark.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
   }
   .bg-pattern-desktop-dark {
-    /* La función url() automáticamente resolverá la ruta al archivo SVG. */
     background-image: url("./pattern-background-desktop-dark.svg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    /* Agrega cualquier otra propiedad de fondo de CSS que necesites */
   }
 }
