--- a/src/index.css
+++ b/src/index.css
@@ -5,21 +5,22 @@
   .bg-cover {
     min-height: 100vh;
     width: 100%;
-    display: flex; /* Opcional: ayuda a centrar contenido */
+    display: flex;
     flex-direction: column;
   }
 
+  /* mobile  */
   .bg-pattern {
     background-image: url("./pattern-background-mobile-light.svg");
-    background-size: contain;
+    background-size: auto !important;
     background-repeat: no-repeat;
   }
 
-  /* Tablet (desde 768px) */
+  /* Tablet */
   @media (min-width: 768px) {
     .bg-pattern {
       background-image: url("./pattern-background-tablet-light.svg");
-      background-size: contain;
+      background-size: auto !important;
       background-repeat: no-repeat;
     }
   }
@@ -28,7 +29,7 @@
   @media (min-width: 1024px) {
     .bg-pattern {
       background-image: url("./pattern-background-desktop-light.svg");
-      background-size: cover;
+      background-size: cover !important;
       background-repeat: no-repeat;
     }
   }
