--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @tailwind utilities;
+@custom-variant dark (&:where(.dark, .dark *));
 
 @layer components {
   .bg-cover {
@@ -7,7 +8,13 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #f4f6fa;
+  }
+
+  .bg-cover-dark {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 
   /* mobile  */
@@ -17,10 +24,22 @@
     background-repeat: no-repeat;
   }
 
+  .dark .bg-pattern {
+    background-image: url("./pattern-background-mobile-dark.svg");
+    background-size: auto !important;
+    background-repeat: no-repeat;
+  }
+
   /* Tablet */
   @media (min-width: 768px) {
     .bg-pattern {
       background-image: url("./pattern-background-tablet-light.svg");
+      background-size: auto !important;
+      background-repeat: no-repeat;
+    }
+
+    .dark .bg-pattern {
+      background-image: url("./pattern-background-tablet-dark.svg");
       background-size: auto !important;
       background-repeat: no-repeat;
     }
@@ -33,24 +52,11 @@
       background-size: cover !important;
       background-repeat: no-repeat;
     }
-  }
 
-  .bg-pattern-mobile-dark {
-    background-image: url("./pattern-background-mobile-dark.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  .bg-pattern-tablet-dark {
-    background-image: url("./pattern-background-tablet-dark.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  .bg-pattern-desktop-dark {
-    background-image: url("./pattern-background-desktop-dark.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    .dark .bg-pattern {
+      background-image: url("./pattern-background-desktop-dark.svg");
+      background-size: cover !important;
+      background-repeat: no-repeat;
+    }
   }
 }
